--- a/src/assets/styles/components/_project-panel.css
+++ b/src/assets/styles/components/_project-panel.css
@@ -49,9 +49,8 @@ body:not([class*="fl-theme"]),
     min-height: 12.1875rem;
 
     img {
+        aspect-ratio: 1/1;
         object-fit: cover;
-        height: 100%;
-        width: 100%;
     }
 }
 
@@ -59,6 +58,7 @@ body:not([class*="fl-theme"]),
     font-weight: var(--font-weight-semibold);
     font-family: var(--family-sans-serif);
     font-size: var(--step-4);
+    line-height: 1.2;
     text-decoration: none;
     color: black;
 }
